--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
   "files.associations": {
-    "cub3d.h": "c",
-    "sstream": "c"
-  },
+	"cub3d.h": "c",
+	"sstream": "c",
+	"mlx.h": "c"
+},
   "42header.username": "mkaruvan",
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
