norminette changes and parsing changes comments added

--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mkaruvan <mkaruvan@student.42.fr>          +#+  +:+       +#+         #
+#    By: mkaruvan <mkaruvan@student.42abudhabi.ae>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/12/13 09:20:21 by ayassin           #+#    #+#              #
-#    Updated: 2022/05/28 06:52:02 by mkaruvan         ###   ########.fr        #
+#    Created: 2022/10/24 07:36:08 by mkaruvan          #+#    #+#              #
+#    Updated: 2022/10/24 07:36:09 by mkaruvan         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,34 +14,22 @@ NAME = libftprintf.a
 
 SRC = ft_printfhelper.c ft_printf.c
 
-BNS_SRC = ft_printfhelper1_bonus.c ft_printfhelper2_bonus.c\
-		 ft_printfhelper3_bonus.c ft_printf_bonus.c
-
-DIRS = ../libft
-
 CC = gcc
 
 CFLAGS = -g3 -Werror -Wall -Wextra
 
-
 OBJS = $(SRC:.c=.o)
-
-BNS_OBJS = $(BNS_SRC:.c=.o)
-
 
 all: $(NAME)
 
 .c.o:
 	$(CC) $(CFLAGS) -I../libft -c $^ -o $@
 
-$(NAME): $(SUBDIRS) $(OBJS)
+$(NAME): $(OBJS)
 	ar cr  $(NAME) $(OBJS)
 
-bonus: $(BNS_OBJS)
-	ar cr $(NAME) $(BNS_OBJS)
-
 clean:
-	rm -f $(OBJS) $(BNS_OBJS)
+	rm -f $(OBJS)
 
 fclean: clean
 	rm -f $(NAME)
